--- a/ec2.yaml
+++ b/ec2.yaml
@@ -28,10 +28,10 @@
     wait: yes
     group: webserver
     count: 1
-    region: ap-south-1
+    region: us-east-1
     security_group: ec2-security-group
     tag_name:
-      Name: Aj-ec2   
+      Name: Mk-ec2   
 
   tasks:
     - name: Create a security group
@@ -84,5 +84,5 @@
           sudo apt install docker.io -y
           sudo systemctl start docker
           sudo systemctl enable docker
-          sudo docker run -d --name 2048 -p 3000:3000 sevenajay/2048:latest
+          sudo docker run -d --name 2048 -p 3000:3000 mk/2048:latest
       register: ec2
