--- a/ec2.yaml
+++ b/ec2.yaml
@@ -81,5 +81,5 @@
           sudo apt install docker.io -y
           sudo systemctl start docker
           sudo systemctl enable docker
-          sudo docker run -d --name 2048 -p 3000:3000 mk/2048:latest
+          sudo docker run -d --name 2048 -p 3000:3000 mahesh117/2048:latest
       register: ec2
